k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quoteapp
  labels:
    name: quoteapp
    app.kubernetes.io/name: wise-words-on-demand
    app.kubernetes.io/part-of: quoteapp
